<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/captured_image"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_500"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/capture_image"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/imageInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/image_info"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <Button
        android:id="@+id/sendRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_500"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/send_request_to_python"
        android:textColor="@android:color/white" />

</LinearLayout>
