<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/who_s_your_twin"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerInside"
        android:src="@drawable/cover" />

    <Button
        android:id="@+id/goToMainButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/button_ripple"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/go_to_main_activity"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>
